--- a/SVM_all_Features.ipynb
+++ b/SVM_all_Features.ipynb
@@ -9,8 +9,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -102,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MLP \n",
+    "# SVM\n",
     "n_repeat = 100\n",
     "_metrics = []\n",
     "\n",
@@ -117,20 +119,32 @@
     "    te_inputs = inputs[int(n_samples*0.7):, :]\n",
     "    te_targets = targets[int(n_samples*0.7):]\n",
     "    # train clf\n",
-    "    clf = MLPClassifier(learning_rate_init=1e-2,\n",
-    "        solver='sgd',activation='relu',max_iter=500,\n",
-    "        alpha=5e-4, hidden_layer_sizes=(16, 32, 16),random_state=1)\n",
-    "    clf.fit(tr_inputs, tr_targets)\n",
+    "    poly_kernel_svm_clf = Pipeline([ ( \"scaler\", StandardScaler()),\n",
+    "                                 (\"svm_clf\", SVC(kernel=\"poly\", degree=3, coef0=5, C=15))\n",
+    "                                ])\n",
+    "    poly_kernel_svm_clf.fit(tr_inputs, tr_targets)\n",
     "    # evaluate clf\n",
-    "    te_pred = clf.predict(te_inputs)\n",
+    "    te_pred = poly_kernel_svm_clf.predict(te_inputs)\n",
+    "    te_pred[te_pred>0.5] = 1\n",
+    "    te_pred[te_pred<0.5] = 0\n",
     "    run_metrics = metrics(te_pred, te_targets)\n",
     "    print(i+1, \"complete\", run_metrics)\n",
     "    _metrics.append(run_metrics)\n",
     "\n",
-    "_metrics = np.array(_metrics)\n",
-    "_metrics = np.mean(_metrics, axis=0)\n",
-    "# [precision, recall, fscore, accuracy, miss_rate, fall_out_rate]\n",
-    "print(_metrics)"
+    "run_metrics = np.array(_metrics)\n",
+    "mean_metrics = np.mean(run_metrics, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\\n\\n========= MEAN OF 100 Experiments ========\\n\")\n",
+    "# 100 experiments => run_metrics\n",
+    "for i, key in enumerate([\"precision\", \"recall\", \"fscore\", \"accuracy\", \"miss_rate\", \"fall_out_rate\"]): \n",
+    "    print(key, mean_metrics[i])"
    ]
   }
  ],
